--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap');
 
 :root {
     /* COLOR PALETTE */
@@ -28,10 +28,9 @@ html {
     line-height: 1.5;
 }
 
-
 .root-container {
     background-color: var(--midnight-shadow);
-    background-image: url("../assets/images/bg-illustration.svg");
+    background-image: url("../assets/bg-illustration.svg");
     background-size: contain;
     background-position: top 50% right -150px;
     background-repeat: no-repeat;
